--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -17,12 +18,20 @@
     "url": "https://github.com/jucemar/maps-acs-bigua/issues"
   },
   "homepage": "https://github.com/jucemar/maps-acs-bigua#readme",
-  "dependencies": {
-    "@google/markerclusterer": "^1.0.3",
-    "fs": "0.0.1-security"
-  },
   "devDependencies": {
-    "browserify": "^16.2.3",
-    "convert-csv-to-json": "0.0.14"
+    "webpack-dev-server": "3.7.2",
+    "cross-env": "5.1.5",
+    "optimize-css-assets-webpack-plugin": "4.0.1",
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "webpack": "4.34.0",
+    "webpack-cli": "3.3.4",
+    "css-loader": "0.28.11",
+    "style-loader": "0.21.0",
+    "mini-css-extract-plugin": "0.4.0",
+    "file-loader": "1.1.11"
+  },
+  "dependencies": {
+    "dotenv-webpack": "^1.7.0",
+    "load-google-maps-api": "^1.3.3"
   }
 }
