--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=development webpack"
   },
   "repository": {
     "type": "git",
@@ -19,19 +19,27 @@
   },
   "homepage": "https://github.com/jucemar/maps-acs-bigua#readme",
   "devDependencies": {
-    "webpack-dev-server": "3.7.2",
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "5.1.5",
+    "css-loader": "0.28.11",
+    "file-loader": "1.1.11",
+    "mini-css-extract-plugin": "0.4.0",
     "optimize-css-assets-webpack-plugin": "4.0.1",
+    "style-loader": "0.21.0",
     "uglifyjs-webpack-plugin": "1.2.5",
+    "url-loader": "^2.0.0",
     "webpack": "4.34.0",
     "webpack-cli": "3.3.4",
-    "css-loader": "0.28.11",
-    "style-loader": "0.21.0",
-    "mini-css-extract-plugin": "0.4.0",
-    "file-loader": "1.1.11"
+    "webpack-dev-server": "3.7.2"
   },
   "dependencies": {
+    "@google/markerclusterer": "^1.0.3",
+    "chart.js": "^2.8.0",
+    "csvtojson": "^2.0.10",
     "dotenv-webpack": "^1.7.0",
-    "load-google-maps-api": "^1.3.3"
+    "google-maps": "^3.3.0",
+    "load-google-maps-api": "^1.3.3",
+    "node-js-marker-clusterer": "^1.0.0",
+    "papaparse": "^5.0.0"
   }
 }
